# Aspose.Words-for-C

./: .gitattributes  .gitignore  .gitmodules  Aspose.Words.Examples.Cpp.sln  Aspose.Words.Examples.Cpp.vcxproj  Aspose.Words.Examples.Cpp.vcxproj.filters  CompareDocument.cpp  README.md  packages.config
ApiExamples/Cpp/gtest/fused-src/: CMakeLists.txt
ApiExamples/Cpp/gtest/fused-src/gtest/: gtest-all.cc  gtest-skip-exception.h  gtest.h  gtest_main.cc
Examples/ApiExamples/: ApiExamples.sln  ApiExamples.vcxproj  ApiExamples.vcxproj.filters  CMakeLists.txt  README.md  packages.config  vcpkg-configuration.json  vcpkg.json
Examples/ApiExamples/source/: ApiExampleBase.cpp  ApiExampleBase.h  DocumentHelper.cpp  DocumentHelper.h  ExAI.cpp  ExAI.h  ExAbsolutePositionTab.cpp  ExAbsolutePositionTab.h  ExBookmarks.cpp  ExBookmarks.h  ExBookmarksOutlineLevelCollection.cpp  ExBookmarksOutlineLevelCollection.h  ExBorder.cpp  ExBorder.h  ExBorderCollection.cpp  ExBorderCollection.h  ExBuildVersion.cpp  ExBuildVersion.h  ExBuildingBlocks.cpp  ExBuildingBlocks.h  ExCellFormat.cpp  ExCellFormat.h  ExCertificateHolder.h  ExCharts.cpp  ExCharts.h  ExChmLoadOptions.cpp  ExChmLoadOptions.h  ExCleanupOptions.cpp  ExCleanupOptions.h  ExComment.cpp  ExComment.h  ExCompatibilityOptions.cpp  ExCompatibilityOptions.h  ExControlChar.cpp  ExControlChar.h  ExDigitalSignatureCollection.cpp  ExDigitalSignatureCollection.h  ExDigitalSignatureUtil.cpp  ExDigitalSignatureUtil.h  ExDocSaveOptions.cpp  (+161 more)
Examples/ApiExamples/source/HelperClasses/: Common.cpp  Common.h
Examples/ApiExamples/source/HelperClasses/TestBuilders/: ColorItemTestBuilder.cpp  ColorItemTestBuilder.h  DocumentTestBuilder.cpp  DocumentTestBuilder.h  ImageTestBuilder.cpp  ImageTestBuilder.h  NumericTestBuilder.cpp  NumericTestBuilder.h
Examples/ApiExamples/source/HelperClasses/TestClasses/: ClientTestClass.cpp  ClientTestClass.h  ColorItemTestClass.cpp  ColorItemTestClass.h  ContractTestClass.cpp  ContractTestClass.h  DocumentTestClass.cpp  DocumentTestClass.h  ImageTestClass.cpp  ImageTestClass.h  ManagerTestClass.cpp  ManagerTestClass.h  MessageTestClass.cpp  MessageTestClass.h  NumericTestClass.cpp  NumericTestClass.h  ShareQuoteTestClass.cpp  ShareQuoteTestClass.h  ShareTestClass.cpp  ShareTestClass.h
Examples/ApiExamples/source/TestData/: Common.cpp  Common.h
Examples/ApiExamples/source/TestData/TestBuilders/: ColorItemTestBuilder.cpp  ColorItemTestBuilder.h  DocumentTestBuilder.cpp  DocumentTestBuilder.h  ImageTestBuilder.cpp  ImageTestBuilder.h  NumericTestBuilder.cpp  NumericTestBuilder.h
Examples/ApiExamples/source/TestData/TestClasses/: ClientTestClass.cpp  ClientTestClass.h  ColorItemTestClass.cpp  ColorItemTestClass.h  ContractTestClass.cpp  ContractTestClass.h  DocumentTestClass.cpp  DocumentTestClass.h  ImageTestClass.cpp  ImageTestClass.h  ManagerTestClass.cpp  ManagerTestClass.h  MessageTestClass.cpp  MessageTestClass.h  NumericTestClass.cpp  NumericTestClass.h
Examples/DocsExamples/: CMakeLists.txt  DocsExamples.sln  DocsExamples.vcxproj  DocsExamples.vcxproj.filters  README.md  nuget.config  packages.config  vcpkg.json
Examples/DocsExamples/cmake/: GroupSources.cmake
Examples/DocsExamples/source/: DocsExamplesBase.cpp  DocsExamplesBase.h
Examples/DocsExamples/source/File Formats and Conversions/: Base conversions.cpp  Base conversions.h  Working with FileFormat.cpp  Working with FileFormat.h
Examples/DocsExamples/source/File Formats and Conversions/Load Options/: Working with HtmlLoadOptions.cpp  Working with HtmlLoadOptions.h  Working with LoadOptions.cpp  Working with LoadOptions.h  Working with RtfLoadOptions.cpp  Working with RtfLoadOptions.h  Working with TxtLoadOptions.cpp  Working with TxtLoadOptions.h
Examples/DocsExamples/source/File Formats and Conversions/Save Options/: Working with DocSaveOptions.cpp  Working with DocSaveOptions.h  Working with HtmlFixedSaveOptions.cpp  Working with HtmlFixedSaveOptions.h  Working with HtmlSaveOptions.cpp  Working with HtmlSaveOptions.h  Working with ImageSaveOptions.cpp  Working with ImageSaveOptions.h  Working with MarkdownSaveOptions.cpp  Working with MarkdownSaveOptions.h  Working with OdtSaveOptions.cpp  Working with OdtSaveOptions.h  Working with OoxmlSaveOptions.cpp  (+9 more)
Examples/DocsExamples/source/Getting started/: Apply License.cpp  Apply License.h  Hello world.cpp  Hello world.h
Examples/DocsExamples/source/Mail Merge and Reporting/: Base operations.cpp  Base operations.h  Working with CleanupOptions.cpp  Working with CleanupOptions.h  Working with Fields.cpp  Working with Fields.h  Working with XML data.h
Examples/DocsExamples/source/Programming with Documents/: Apply License.cpp  Apply License.h  Working with Comments.cpp  Working with Comments.h  Working with Fields.cpp  Working with Fields.h  Working with Fonts.cpp  Working with Fonts.h  Working with Footnote and Endnote.cpp  Working with Footnote and Endnote.h  Working with FormFields.cpp  Working with FormFields.h  Working with Headers and Footers.cpp  Working with Headers and Footers.h  Working with Hyphenation.cpp  Working with Hyphenation.h  Working with List.cpp  Working with List.h  Working with Markdown.cpp  Working with Markdown.h  Working with Node.cpp  Working with Node.h  Working with OleObjects and ActiveX.cpp  Working with OleObjects and ActiveX.h  Working with Revisions.cpp  Working with Revisions.h  Working with Section.cpp  Working with Section.h  Working with Textboxes.cpp  Working with Textboxes.h  Working with VBA Macros.cpp  Working with VBA Macros.h
Examples/DocsExamples/source/Rendering and Printing/: Rendering shapes.cpp  Rendering shapes.h
Examples/gtest/: CMakeLists.txt  gmock-gtest-all.cc  gmock_main.cc
Examples/gtest/gmock/: gmock.h
Showcases/DocumentExplorer/: CMakeLists.txt  README.md  TestFile.Source.doc  aboutdialog.cpp  aboutdialog.ui  documentmodel.cpp  documentmodel.h  hidpisupport.cpp  hidpisupport.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtcorehelpers.h  resources.qrc  viewerwindow.cpp  viewerwindow.h  viewerwindow.ui
cpp/: RunExamples.cpp  (+5 more)
(+1103 files in other folders)
